# llm-moral

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
analysis/: power_analysis.py  primary_test.py  random_slope.py  random_slope_export.py  secondary_tests.py
scenarios/: autonomy-consent-01.yaml  autonomy-consent-02.yaml  autonomy-consent-03.yaml  autonomy-consent-04.yaml  autonomy-consent-05.yaml  autonomy-consent-06.yaml  autonomy-consent-07.yaml  autonomy-consent-08.yaml  autonomy-consent-09.yaml  autonomy-consent-10.yaml  care-ethics-01.yaml  care-ethics-02.yaml  care-ethics-03.yaml  care-ethics-04.yaml  care-ethics-05.yaml  care-ethics-06.yaml  care-ethics-07.yaml  care-ethics-08.yaml  care-ethics-09.yaml  care-ethics-10.yaml  collective-action-01.yaml  collective-action-02.yaml  collective-action-03.yaml  collective-action-04.yaml  collective-action-05.yaml  collective-action-06.yaml  collective-action-07.yaml  collective-action-08.yaml  collective-action-09.yaml  collective-action-10.yaml  competing-obligations-01.yaml  competing-obligations-02.yaml  competing-obligations-03.yaml  competing-obligations-04.yaml  competing-obligations-05.yaml  competing-obligations-06.yaml  competing-obligations-07.yaml  competing-obligations-08.yaml  competing-obligations-09.yaml  competing-obligations-10.yaml  (+91 more)
src/: adapter.py  main.py  orchestrator.py  path_generator.py  schema.py  storage.py  validation.py
tests/: test_path_generator.py
